--- a/demo/DataDispatcherDemo.ipynb
+++ b/demo/DataDispatcherDemo.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffaca6fb",
+   "id": "b7d468ba",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -294,10 +294,12 @@
     "            did=${namespace}:${name}\n",
     "            \n",
     "            # checksum type from project attributes\n",
-    "            checksum_type=`python json_extract.py $info_file project_attributes/checksum_type`\n",
+    "            checksum_type=`python json_extract.py \\\n",
+    "                $info_file project_attributes/checksum_type`\n",
     "\n",
     "            # size and checksum from MetaCat via file attributes\n",
-    "            meta_checksum=`python json_extract.py $info_file attributes/checksums/$checksum_type`\n",
+    "            meta_checksum=`python json_extract.py \\\n",
+    "                $info_file attributes/checksums/$checksum_type`\n",
     "            meta_size=`python json_extract.py $info_file attributes/size`\n",
     "\n",
     "            echo\n",
@@ -327,17 +329,23 @@
     "            # compare and print results\n",
     "            ok=ok\n",
     "            if [ \"$size\" != $meta_size ]; then\n",
-    "                echo File size mismatch for $did: metadata: $meta_size, downloaded: $size\n",
+    "                echo File size mismatch for $did\n",
+    "                echo \"  metadata:  \" $meta_size\n",
+    "                echo \"  downloaded:\" $size\n",
     "                ok=\"\"\n",
     "            fi\n",
     "            if [ \"$checksum\" != $meta_checksum ]; then\n",
-    "                echo Checksum mismatch for $did: metadata: $meta_checksum, downloaded: $checksum\n",
+    "                echo Checksum mismatch for $did\n",
+    "                echo \"  metadata:  \" $meta_checksum\n",
+    "                echo \"  downloaded:\" $checksum\n",
     "                ok=\"\"\n",
     "            fi\n",
     "            if [ \"$ok\" == \"ok\" ]; then\n",
-    "                echo $did:  OK: size=$size $checksum_type=$checksum\n",
+    "                echo OK: $did \n",
+    "                echo \"  size:    \" $size \n",
+    "                echo \"  checksum:\" $checksum \"($checksum_type)\" \n",
     "            fi\n",
-    "            rm -f $tmpfile\n",
+    "            rm -f $tmpfile $info_file\n",
     "            dd worker done $project_id $did\n",
     "            echo\n",
     "    \tfi\n",
