--- a/demo/DataDispatcherDemo.ipynb
+++ b/demo/DataDispatcherDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "282a12a4",
+   "id": "d3ef3855",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -13,10 +13,10 @@
     "\n",
     "* Create project\n",
     "* Project parametrization\n",
-    "* Copying metadata\n",
+    "* Copying metadata from MetaCat\n",
     "* Run worker\n",
     "* Run multiple workers\n",
-    "* Restart project"
+    "* GUI monitoring"
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1548065",
+   "id": "97c4514a",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -210,10 +210,10 @@
     "  \"namespace\": \"dc4-hd-protodune\",\n",
     "  \"replicas\": [\n",
     "    {\n",
-    "      \"rse\": \"DUNE_CERN_EOS\",\n",
-    "      \"url\": \"root://eospublic.cern.ch//eos/experiment/neutplatform/protodune/dune/dc4-hd-protodune/dc/86/file.root\",\n",
-    "      \"path\": \"/eos/experiment/neutplatform/protodune/dune/dc4-hd-protodune/dc/86/file.root\",\n",
     "      \"preference\": 1,\n",
+    "      \"url\": \"root://eospublic.cern.ch//eos/...\",\n",
+    "      \"rse\": \"DUNE_CERN_EOS\",\n",
+    "      \"path\": \"/eos/...\",\n",
     "      ...\n",
     "    }\n",
     "  ],\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f4eb62",
+   "id": "30ff4027",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -236,12 +236,14 @@
     "\n",
     "* while the project is active (not all files are *done* or *failed permanently*)\n",
     "    1. get next file from DD\n",
-    "       * wait for a file to become available\n",
+    "       * wait for a file replica to become available\n",
     "           * copied/staged into a known RSE\n",
-    "           * another worker failed non-permanently\n",
+    "           * another worker failed it, non-permanently\n",
     "    1. download the file using the URL received from DD\n",
+    "       * use http or xrootd transport protocol\n",
     "    1. calculate the checksum of the requested type -- *use checksum.py*\n",
-    "    1. compare calculated checksum and file size to the file metadata received from DD\n",
+    "    1. compare actual checksum and file size to the metadata received from DD\n",
+    "       * actually from MetaCat via DD\n",
     "    1. print results\n",
     "\n",
     "\n",
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7d468ba",
+   "id": "d28c527f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -281,11 +283,11 @@
     "\n",
     "done=\"false\"\n",
     "while [ $done == \"false\" ]; do\n",
-    "\tdd worker next -w $my_id -j $project_id > $info_file\n",
+    "\tdd worker next -j -w $my_id $project_id > $info_file     # -j = JSON info\n",
     "        if [ \"$?\" != \"0\" ]; then\n",
     "            # likely the project is done\n",
     "            done=\"true\"\n",
-    "            cat $info_file\n",
+    "            cat $info_file                   # this will show the actual reason\n",
     "            rm -f $info_file\n",
     "        else\n",
     "            url=`python json_extract.py $info_file replicas/0/url`\n",
